2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/ntp_11.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

	* openvassd/save_kb.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/preferences.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of DO_EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/utils.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/otp_1_0.c: Remove use of includes.h as it was
	not necessary.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/hosts.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/users.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/auth.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/locks.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/log.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/rules.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/comm.c: Removed uselsess defines of FALSE and TRUE.
